Bouton devenu un bloc, textes pour expliquer le petit jeu et écran de fin lorsqu'on n'a plus de Bitcoin. Les villes sont devenues des planètes.

--- a/touch/VRTrain/index.html
+++ b/touch/VRTrain/index.html
@@ -14,7 +14,7 @@
     <script src="https://unpkg.com/super-hands@2.1.0/dist/super-hands.min.js"></script>
     <script src="https://unpkg.com/aframe-physics-extras@0.1.2/dist/aframe-physics-extras.min.js"></script>
     <script src="https://unpkg.com/aframe-animation-component@^4.1.2/dist/aframe-animation-component.min.js"></script>
-    <script src="components/train.js"></script>
+    <script src="components/spaceship.js"></script>
     <script src="components/rafraichissement.js"></script>
     <script src="components/prochain-arret.js"></script>
     <script src="components/bouton-achat-vente.js"></script>
@@ -76,7 +76,7 @@
        <!-- Bouton -->
        <a-mixin id="Bouton" bouton-achat-vente
                 material="opacity:1;color:#c4c4c4;"
-                geometry="primitive:plane;height:0.2;width:0.65;"
+                geometry="primitive:box;height:0.2;width:0.65;depth:0.2"
                 text="alphaTest:0.6;
                       zOffset:0.01;
                       tabSize: 0; width: 0.5;
@@ -88,14 +88,10 @@
                 scale="2.6 2.6 1"></a-mixin>
 
         <!-- Chansons -->
-        <audio id="coupe" src="audio/Coupe.mp3"
-               loop="true"></audio>
-        <audio id="mysteries" src="audio/Mysteries.mp3"
-               loop="true"></audio>
-        <audio id="splashing-around" src="audio/Splashing_Around.mp3"
-               loop="true"></audio>
-        <audio id="wind-marching-for-rain" src="audio/Wind_Marching_For_Rain.mp3"
-               loop="true"></audio>
+        <audio id="coupe" src="audio/Coupe.mp3"></audio>
+        <audio id="mysteries" src="audio/Mysteries.mp3"></audio>
+        <audio id="splashing-around" src="audio/Splashing_Around.mp3"></audio>
+        <audio id="wind-marching-for-rain" src="audio/Wind_Marching_For_Rain.mp3"></audio>
 
         <!-- Boite son -->
         <a-mixin id="boite-son" jouer-son
@@ -129,6 +125,7 @@
                                       objects:.bouton,
                                               .boite-son,
                                               .poignee,
+                                              .tutoriel,
                                               #map;">
         <a-camera id="head" camera="far:500;"></a-camera>
         <a-entity id="lhand" class="left-controller" hand-controls="left"></a-entity>
@@ -137,7 +134,7 @@
 
       <!-- Le panneau prochain arrêt -->
       <a-entity id="ui-prochain-arret" sleepy dynamic-body grabbable hoverable
-                position="1 2 1.5" scale="0.15 0.15 0.15" rotation="0 180 0"
+                position="1.5 2 1" scale="0.15 0.15 0.15" rotation="0 180 0"
                 prochain-arret>
 
         <!-- Fond -->
@@ -146,9 +143,9 @@
         <!-- Nom et temps restant -->
         <a-entity position="0 -0.25 0">
           <a-text class="pa-ville" mixin="titreVille"
-                  value="Train arrives  in Townroto" position="0 0.25 0"></a-text>
+                  value="Spaceship arrives  in Townroto" position="0 0.25 0"></a-text>
           <a-text class="pa-eta" mixin="titreVille"
-                  value="ETA: 0" position="0 -0.5 0"></a-text>
+                  value="ETA: 0" position="0 -0.7 0"></a-text>
         </a-entity>
 
         <!-- Poigné -->
@@ -157,7 +154,7 @@
 
       <!-- Le panneau de notre inventaire -->
       <a-entity id="ui-inventaire" sleepy dynamic-body grabbable hoverable
-                position="1 1 1.5" scale="0.15 0.15 0.15" rotation="0 180 0">
+                position="1.5 1 1" scale="0.15 0.15 0.15" rotation="0 180 0">
 
         <!-- Fond -->
         <a-entity class="panneau" position="0 -0.3 0" mixin="panneau"></a-entity>
@@ -183,7 +180,7 @@
 
       <!-- Le panneau de notre compte de banque  -->
       <a-entity id="ui-argent" sleepy dynamic-body grabbable hoverable
-                position="1 1.5 1.5" scale="0.15 0.15 0.15" rotation="0 180 0">
+                position="1.5 1.5 1" scale="0.15 0.15 0.15" rotation="0 180 0">
 
         <!-- Fond -->
         <a-entity class="panneau" position="0 -0.3 0" mixin="panneau"></a-entity>
@@ -194,16 +191,16 @@
                   value="Your Money" position="0 0.5 0"></a-text>
           <a-entity id="myMoney"
                     position="0 0 0.001"
-                    text="value:0 $;wrapCount:15;width:2.5;align:center;"></a-entity>
+                    text="value:0 Bitcoin;wrapCount:15;width:2.5;align:center;"></a-entity>
         </a-entity>
 
         <!-- Poigné -->
         <a-entity class="poignee" position="1.75 -0.3 0" mixin="poignee"></a-entity>
       </a-entity>
 
-      <!-- Le panneau article Boston -->
+      <!-- Le panneau article Jupiter -->
       <a-entity class="ui-article" sleepy dynamic-body grabbable hoverable
-                position="0 2 1.5" scale="0.15 0.15 0.15" rotation="0 180 0">
+                position="0.5 2 1" scale="0.15 0.15 0.15" rotation="0 180 0">
 
         <!-- Fond -->
         <a-entity class="panneau" position="0 -0.3 0" mixin="panneau"></a-entity>
@@ -211,7 +208,7 @@
         <!-- Valeur articles -->
         <a-entity position="0 -0.25 0">
           <a-text class="texteArticle" mixin="titreVille"
-                  value="Boston" position="0 0.5 0"></a-text>
+                  value="Jupiter" position="0 0.5 0"></a-text>
           <a-entity class="article"
                     position="0 0 0.001"
                     text="value:Grain: 0;wrapCount:15;width:2.5;align:center;"></a-entity>
@@ -227,9 +224,9 @@
         <a-entity class="poignee" position="1.75 -0.3 0" mixin="poignee"></a-entity>
       </a-entity>
 
-      <!-- Le panneau article Montreal -->
+      <!-- Le panneau article Mars -->
       <a-entity class="ui-article" sleepy dynamic-body grabbable hoverable
-                position="0 1.5 1.5" scale="0.15 0.15 0.15" rotation="0 180 0">
+                position="0.5 1.5 1" scale="0.15 0.15 0.15" rotation="0 180 0">
 
         <!-- Fond -->
         <a-entity class="panneau" position="0 -0.3 0" mixin="panneau"></a-entity>
@@ -237,7 +234,7 @@
         <!-- Valeur articles -->
         <a-entity position="0 -0.25 0">
           <a-text class="texteArticle" mixin="titreVille"
-                  value="Montreal" position="0 0.5 0"></a-text>
+                  value="Mars" position="0 0.5 0"></a-text>
           <a-entity class="article"
                     position="0 0 0.001"
                     text="value:Grain: 0;wrapCount:15;width:2.5;align:center;"></a-entity>
@@ -253,9 +250,9 @@
         <a-entity class="poignee" position="1.75 -0.3 0" mixin="poignee"></a-entity>
       </a-entity>
 
-      <!-- Le panneau article Toronto -->
+      <!-- Le panneau article Earth -->
       <a-entity class="ui-article" sleepy dynamic-body grabbable hoverable
-                position="0 1 1.5" scale="0.15 0.15 0.15" rotation="0 180 0">
+                position="0.5 1 1" scale="0.15 0.15 0.15" rotation="0 180 0">
 
         <!-- Fond -->
         <a-entity class="panneau" position="0 -0.3 0" mixin="panneau"></a-entity>
@@ -263,7 +260,7 @@
         <!-- Valeur articles -->
         <a-entity position="0 -0.25 0">
           <a-text class="texteArticle" mixin="titreVille"
-                  value="Toronto" position="0 0.5 0"></a-text>
+                  value="Earth" position="0 0.5 0"></a-text>
           <a-entity class="article"
                     position="0 0 0.001"
                     text="value:Grain: 0;wrapCount:15;width:2.5;align:center;"></a-entity>
@@ -281,7 +278,7 @@
 
       <!-- Les panneaux pour acheter les articles -->
       <a-entity class="ui-achat" sleepy dynamic-body grabbable hoverable
-                position="-1 2 1.5" scale="0.15 0.15 0.15" rotation="0 180 0">
+                position="-0.5 2 1" scale="0.15 0.15 0.15" rotation="0 180 0">
 
         <!-- Fond -->
         <a-entity class="panneau" position="0 -0.3 0" mixin="panneau-achat"></a-entity>
@@ -291,11 +288,11 @@
           <a-text mixin="titreVille"
                   value="Grain" position="0 1.5 0"></a-text>
           <a-entity class="bouton" mixin="Bouton"
-                    position="0 0.5 0.001" data-btn="1"
-                    text="value:Buy;"></a-entity>
+                    position="0 0.5 0.2" data-btn="1"
+                    text="value:Buy;zOffset:0.15"></a-entity>
           <a-entity class="bouton" mixin="Bouton"
-                    position="0 -1 0.001" data-btn="2"
-                    text="value:Sell;"></a-entity>
+                    position="0 -1 0.2" data-btn="2"
+                    text="value:Sell;zOffset:0.15"></a-entity>
         </a-entity>
 
         <!-- Poigné -->
@@ -303,7 +300,7 @@
       </a-entity>
 
       <a-entity class="ui-achat" sleepy dynamic-body grabbable hoverable
-                position="-1 1 1.5" scale="0.15 0.15 0.15" rotation="0 180 0">
+                position="-0.5 1 1" scale="0.15 0.15 0.15" rotation="0 180 0">
 
         <!-- Fond -->
         <a-entity class="panneau" position="0 -0.3 0" mixin="panneau-achat"></a-entity>
@@ -313,11 +310,11 @@
           <a-text mixin="titreVille"
                   value="Poutine" position="0 1.5 0"></a-text>
           <a-entity class="bouton" mixin="Bouton"
-                    position="0 0.5 0.001" data-btn="3"
-                    text="value:Buy;"></a-entity>
+                    position="0 0.5 0.2" data-btn="3"
+                    text="value:Buy;zOffset:0.15"></a-entity>
           <a-entity class="bouton" mixin="Bouton"
-                    position="0 -1 0.001" data-btn="4"
-                    text="value:Sell;"></a-entity>
+                    position="0 -1 0.2" data-btn="4"
+                    text="value:Sell;zOffset:0.15"></a-entity>
         </a-entity>
 
         <!-- Poigné -->
@@ -325,7 +322,7 @@
       </a-entity>
 
       <a-entity class="ui-achat" sleepy dynamic-body grabbable hoverable
-                position="-2 1 1.5" scale="0.15 0.15 0.15" rotation="0 180 0">
+                position="-1.5 1 1" scale="0.15 0.15 0.15" rotation="0 180 0">
 
         <!-- Fond -->
         <a-entity class="panneau" position="0 -0.3 0" mixin="panneau-achat"></a-entity>
@@ -335,11 +332,11 @@
           <a-text mixin="titreVille"
                   value="Steel" position="0 1.5 0"></a-text>
           <a-entity class="bouton" mixin="Bouton"
-                    position="0 0.5 0.001" data-btn="5"
-                    text="value:Buy;"></a-entity>
+                    position="0 0.5 0.2" data-btn="5"
+                    text="value:Buy;zOffset:0.15"></a-entity>
           <a-entity class="bouton" mixin="Bouton"
-                    position="0 -1 0.001" data-btn="6"
-                    text="value:Sell;"></a-entity>
+                    position="0 -1 0.2" data-btn="6"
+                    text="value:Sell;zOffset:0.15"></a-entity>
         </a-entity>
 
         <!-- Poigné -->
@@ -347,62 +344,109 @@
       </a-entity>
 
       <!-- Map -->
-      <a-entity id="map" sleepy dynamic-body grabbable hoverable train
-                geometry="primitive:cylinder;height:0.5;" material="color:green;"
-                event-set__hoveron="_event: hover-start; material.opacity: 0.7; transparent: true"
-                event-set__hoveroff="_event: hover-end; material.opacity: 1; transparent: false">
-        <a-entity position="0 0.5 0.75" material="color:#ffb800;"
-                  geometry="primitive:ring;radiusInner:0.18;
-                            radiusOuter:0.2;thetaLength:0;"
-                  text="value:Boston;yOffset:2;
-                        color:#000000;width:2;
-                        side:doubledsa;align:center;
-                        color:white;">
-        </a-entity>
-        <a-entity position="0.75 0.5 0" material="color:#bf2f38;"
-                  geometry="primitive:ring;radiusInner:0.18;
-                            radiusOuter:0.2;thetaLength:0;"
-                  text="value:Montreal;yOffset:2;
-                        color:#000000;width:2;
-                        side:doubledsa;align:center;
-                        color:white;">
-        </a-entity>
-        <a-entity position="-0.75 0.5 0" material="color:#003876;"
-                  geometry="primitive:ring;radiusInner:0.18;
-                            radiusOuter:0.2;thetaLength:0;"
-                  text="value:Toronto;yOffset:2;
-                        color:#000000;width:2;
-                        side:double;align:center;
-                        color:white;">
-        </a-entity>
+      <a-entity id="map" sleepy dynamic-body grabbable hoverable spaceship
+                scale="0.75 0.75 0.75" rotation="0 90 0" position="-1.5 0.5 0">
+
+        <a-sphere geometry="radius:0.2" position="0 0.5 0.75"
+                  material="color:#ffb800;">
+          <a-entity text="value:Jupiter;yOffset:2;
+                          color:#000000;width:2;
+                          side:double;align:center;
+                          color:white;"
+                    position="0 -0.5 0">
+          </a-entity>
+          <a-sphere geometry="radius:0.3"
+                    material="color:#FFFFFF;opacity:0;
+                              transparent:true;depthTest:false;">
+          </a-sphere>
+        </a-sphere>
+
+        <a-sphere geometry="radius:0.2" position="0.75 0.5 0"
+                  material="color:#bf2f38;">
+          <a-entity text="value:Mars;yOffset:2;
+                          color:#000000;width:2;
+                          side:double;align:center;
+                          color:white;"
+                    position="0 -0.5 0">
+          </a-entity>
+          <a-sphere geometry="radius:0.3"
+                    material="color:#FFFFFF;opacity:0;
+                              transparent:true;depthTest:false;">
+          </a-sphere>
+        </a-sphere>
+
+        <a-sphere geometry="radius:0.2" position="-0.75 0.5 0"
+                  material="color:#003876;">
+          <a-entity text="value:Earth;yOffset:2;
+                          color:#000000;width:2;
+                          side:double;align:center;
+                          color:white;"
+                    position="0 -0.5 0">
+          </a-entity>
+          <a-sphere geometry="radius:0.3"
+                    material="color:#FFFFFF;opacity:0;
+                              transparent:true;depthTest:false;">
+          </a-sphere>
+        </a-sphere>
+
+        <!-- Poigné -->
+        <a-entity class="poignee" position="0 -0.19 0"
+                  mixin="poignee" geometry="height:0.125;depth:0.125;
+                                            width:2;primitive:cylinder;"></a-entity>
       </a-entity>
 
       <a-plane static-body rotation="270 0 0" visible="false" geometry="height:20;width:20;"></a-plane>
 
+      <!-- Textes tutoriaux -->
+      <a-entity sleepy dynamic-body grabbable hoverable
+                class="poignee" mixin="poignee" position="-1 2.5 -1"
+                geometry="depth:0.1;height:1.2;width:2.1;"
+                text="value:Click the trackpad to enable or disable the objects to be grabbable.
+
+                            Red color: not grabbable
+                            Green color: grabbable;
+                      align:center;width:2;wrapCount:20;zOffset:0.08;"></a-entity>
+      <a-entity sleepy dynamic-body grabbable hoverable position="-1 1 -1"
+                class="poignee" mixin="poignee"
+                geometry="depth:0.1;height:1;width:2.1;"
+                text="value:Use the trigger to interact with object, for example to grab a panel or buy some articles.;
+                      align:center;width:2;wrapCount:20;zOffset:0.08;"></a-entity>
+      <a-entity sleepy dynamic-body grabbable hoverable position="2 2.5 -1"
+                class="poignee" mixin="poignee"
+                geometry="depth:0.1;height:1.2;width:2.1;"
+                text="value:The goal of this game is to not lose all your Bitcoins. You can sell and buy articles to make more profit. Beware the transportation fees!;
+                      align:center;width:2;wrapCount:20;zOffset:0.08;"></a-entity>
+      <a-entity sleepy dynamic-body grabbable hoverable position="2 1 -1"
+                class="poignee" mixin="poignee"
+                geometry="depth:0.1;height:1;width:2.1;"
+                text="value:You can place your environment to be more efficent.;
+                      align:center;width:2;wrapCount:20;zOffset:0.08;"></a-entity>
+
       <!-- Son -->
-      <a-entity id="jukebox" rotation="0 180 0" hoverable sleepy
-               dynamic-body grabbable position="3 1 1.5" scale="0.5 0.5 0.5">
-        <a-text value="JUKEBOX - CLICK A CUBE TO PLAY THE SONG !"
-                align="center" width="2" wrapCount="20" position="0 -0.19 0.075"></a-text>
-        <a-entity class="boite-son" sound="src:#coupe;"
-                  mixin="boite-son" position="-0.75 -0.5 0"
+      <a-entity id="jukebox" hoverable sleepy
+               dynamic-body grabbable position="2 1 0.25" scale="0.5 0.5 0.5">
+        <a-text value="JUKEBOX - CLICK A CUBE TO PLAY THE SONG !" rotation="0 270 0"
+                align="center" width="2" wrapCount="20" position="-0.07 -0.19 0"></a-text>
+        <a-entity class="boite-son" sound="src:#coupe;loop:true;"
+                  mixin="boite-son" position="0 -0.5 -0.75" rotation="0 270 0"
                   text="value:Coupe by The Grand Affair">
         </a-entity>
-        <a-entity class="boite-son" sound="src:#mysteries;"
-                  mixin="boite-son" position="-0.25 -0.5 0"
+        <a-entity class="boite-son" sound="src:#mysteries;loop:true;"
+                  mixin="boite-son" position="0 -0.5 -0.25" rotation="0 270 0"
                   text="value:Mysteries by Dan Lebowitz">
         </a-entity>
-        <a-entity class="boite-son" sound="src:#splashing-around;"
-                  mixin="boite-son" position="0.25 -0.5 0"
+        <a-entity class="boite-son" sound="src:#splashing-around;loop:true;"
+                  mixin="boite-son" position="0 -0.5 0.25" rotation="0 270 0"
                   text="value:Splasphing Around by The Green Orbs">
         </a-entity>
-        <a-entity class="boite-son" sound="src:#wind-marching-for-rain;"
-                  mixin="boite-son" position="0.75 -0.5 0"
+        <a-entity class="boite-son" sound="src:#wind-marching-for-rain;loop:true;"
+                  mixin="boite-son" position="0 -0.5 0.75" rotation="0 270 0"
                   text="value:Wind Marching For Rain by Puddle of Infinity">
         </a-entity>
 
         <!-- Poigné -->
-        <a-entity class="poignee" position="0 -0.19 0" mixin="poignee" geometry="height:0.125;depth:0.125;width:2"></a-entity>
+        <a-entity class="poignee" position="0 -0.19 0" rotation="0 270 0"
+                  mixin="poignee" geometry="height:0.125;depth:0.125;width:2"></a-entity>
       </a-entity>
 
     </a-scene>
