Modification de Daniel Lemire.

--- a/gapmindervr/index.html
+++ b/gapmindervr/index.html
@@ -13,7 +13,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body id="welcome" data-spy="scroll" data-target=".navbar" data-offset="50">
+<body data-spy="scroll" data-target=".navbar" data-offset="50">
 <!-- Navbar -->
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
@@ -39,9 +39,9 @@
 <div id="welcome" class="bg-1">
   <div class="container">
     <h3 class="text-center">WELCOME</h3>
-    <p class="text-center">We were impressed by Hans Rosling work and the Gapminder.org site. A fundamental part of this experience is the animation through time showing how the statistics evolved, sometimes in surprising ways. We present a version of this experience in WebVR where, instead of merely animating the visualization in a passive manner, we provide the user with the ability to control the flow of time by walking on a rail. Thus we capture the original Gapminder experience in an immersive manner.</p>
+     <p>We were impressed by <a href="https://en.wikipedia.org/wiki/Hans_Rosling">Hans Rosling</a> work and the <a href="https://www.gapminder.org">Gapminder.org site</a>. A fundamental part of this experience is the animation through time showing how the statistics evolved, sometimes in surprising ways. We present a version of this experience in virtual reality (VR) where, instead of merely animating the visualization in a passive manner, we provide the user with the ability to control the flow of time by walking on a rail. Thus we capture the <a href="https://www.gapminder.org">original Gapminder experience</a> in an immersive manner.</p>
     <br>
-    <p class="text-center "><kbd>To experience GapminderVR, we recommend an HTC Vive connected to a suitable PC running a recent version of Firefox.</kbd></p>
+    <p><kbd>To experience GapminderVR, we recommend an HTC Vive connected to a suitable PC running a recent version of Firefox. However, <a href="https://webvr.info/">other browsers and headsets might work</a>.</kbd></p>
   </div>
 </div>
 
@@ -49,36 +49,36 @@
 <div id="railOfTime" class='bg-2'>
   <div class="container">
     <h3 class="text-center">RAIL OF TIME</h3>
-    <p class="text-center">Rail of Time is a VR demo where the user uses his feet to change years. Changing year affect the data on the graph. You can also use your pointer to toggle visibility of the countries, and to have more information about them, like their population for the current year.</p>
-    <div class="row text-center">
+    <p>Rail of Time is a VR demo where the user uses his feet to change years. Changing year affect the data on the graph. You can also use your pointer to toggle visibility of the countries, and to have more information about them, like their population for the current year.</p>
+     <div class="row text-center">
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="media/railoftime_media/railoftime_01.jpg" alt="01" width="400" height="300">
+           <a href="media/railoftime_media/railoftime_01.jpg"><img src="media/railoftime_media/railoftime_01.jpg" alt="01" width="400" height="300"></a>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="media/railoftime_media/railoftime_02.jpg" alt="02" width="400" height="300">
+          <a href="media/railoftime_media/railoftime_02.jpg"><img src="media/railoftime_media/railoftime_02.jpg" alt="02" width="400" height="300"></a>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="media/railoftime_media/railoftime_03.jpg" alt="03" width="400" height="300">
+          <a href="media/railoftime_media/railoftime_03.jpg"><img src="media/railoftime_media/railoftime_03.jpg" alt="03" width="400" height="300"></a>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="media/railoftime_media/railoftime_04.jpg" alt="04" width="400" height="300">
+          <a href="media/railoftime_media/railoftime_04.jpg"><img src="media/railoftime_media/railoftime_04.jpg" alt="04" width="400" height="300"></a>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="media/railoftime_media/railoftime_05.jpg" alt="05" width="400" height="300">
+          <a href="media/railoftime_media/railoftime_05.jpg"><img src="media/railoftime_media/railoftime_05.jpg" alt="05" width="400" height="300"></a>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="media/railoftime_media/railoftime_06.jpg" alt="06" width="400" height="300">
+          <a href="media/railoftime_media/railoftime_06.jpg"><img src="media/railoftime_media/railoftime_06.jpg" alt="06" width="400" height="300"></a>
         </div>
       </div>
       <div class="col-sm-12 videoDemo">
@@ -86,7 +86,7 @@
           <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/nDiyrQpmDa0"></iframe>
         </div>
       </div>
-      <a class="btn" href="demo/railOfTime/index.html" target="_blank">Try demo</a>
+      <a class="btn" href="demo/railOfTime/index.html" target="_blank">Try demo with a VR headset</a>
     </div>
   </div>
 </div>
@@ -95,45 +95,45 @@
 <div id="museum" class="bg-1">
   <div class="container">
     <h3 class="text-center">MUSEUM</h3>
-    <p class="text-center">Museum is a VR demo where the user visit a museum where countries are the statues. The data affect their body and surronding, for example, their income is represented by a money sign. The richer the country is, the bigger the sign gets.</p>
-    <div class="row text-center">
+ <p>Museum is a VR demo where the user visit a museum where countries are the statues. The data affect their body and surronding, for example, their income is represented by a money sign. The richer the country is, the bigger the sign gets. We were motivated in part by <a href="https://ourworldindata.org">Our World in Data</a> and by the concept of <a href="https://en.wikipedia.org/wiki/Glyph_(data_visualization)">glyph in data visualization</a> (e.g., <a href="https://en.wikipedia.org/wiki/Chernoff_face">Chernoff faces</a>).</p>
+     <div class="row text-center">
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="media/musee_media/museum_01.jpg" alt="01" width="400" height="300">
+          <a href="media/musee_media/museum_01.jpg"><img src="media/musee_media/museum_01.jpg" alt="01" width="400" height="300"></a>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="media/musee_media/museum_07.jpg" alt="07" width="400" height="300">
+          <a href="media/musee_media/museum_07.jpg"><img src="media/musee_media/museum_07.jpg" alt="07" width="400" height="300"></a>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="media/musee_media/museum_03.jpg" alt="03" width="400" height="300">
+          <a href="media/musee_media/museum_03.jpg"><img src="media/musee_media/museum_03.jpg" alt="03" width="400" height="300"></a>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="media/musee_media/museum_04.jpg" alt="04" width="400" height="300">
+          <a href="media/musee_media/museum_04.jpg"><img src="media/musee_media/museum_04.jpg" alt="04" width="400" height="300"></a>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="media/musee_media/museum_05.jpg" alt="05" width="400" height="300">
+          <a href="media/musee_media/museum_05.jpg"><img src="media/musee_media/museum_05.jpg" alt="05" width="400" height="300"></a>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="media/musee_media/museum_06.jpg" alt="06" width="400" height="300">
+          <a href="media/musee_media/museum_06.jpg"><img src="media/musee_media/museum_06.jpg" alt="06" width="400" height="300"></a>
         </div>
       </div>
       <div class="col-sm-12 videoDemo">
-        <div class="embed-responsive embed-responsive-16by9" margin-bottom="20px">
+        <div class="embed-responsive embed-responsive-16by9"  style="margin-bottom:20px">
           <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/_jzoOV9hCDA"></iframe>
         </div>
       </div>
       <div class="col-sm-12">
-        <a class="btn" href="demo/musee/index.html" target="_blank">Try demo</a>
+        <a class="btn" href="demo/musee/index.html" target="_blank">Try demo with a VR headset</a>
       </div>
     </div>
   </div>
@@ -141,10 +141,12 @@
 
 
 <!-- About -->
-<div id="about" class="container text-center">
+<div id="about" class="container">
   <h3>ABOUT</h3>
   <p>The GapminderVR experience was designed by Niko Girardelli in collaboration
-with Dara Aghamirkarimi, Béatrice Pudelko and Daniel Lemire at the University of Quebec (TELUQ). We acknowledge the support of the Natural Sciences and Engineering Research Council of Canada (NSERC), which invests annually over $1 billion in people, discovery and innovation.</p>
+    with Dara Aghamirkarimi, Béatrice Pudelko and <a href="https://lemire.me/en/">Daniel Lemire</a> at the University of Quebec (TELUQ). We acknowledge the support of the Natural Sciences and Engineering Research Council of Canada (NSERC), which invests annually over $1 billion in people, discovery and innovation.</p>
+    <a href="https://www.teluq.ca/site/en/"><img src="img/logo_teluq_nb.png" width="20%"/></a>
+    <a href="http://nserc-crsng.gc.ca/index_eng.asp"><img src="img/NSERC_B.jpg" width="20%"/></a>
 </div>
 
 
@@ -153,7 +155,7 @@ with Dara Aghamirkarimi, Béatrice Pudelko and Daniel Lemire at the University o
   <a class="up-arrow" href="#welcome" data-toggle="tooltip" title="TO TOP">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a><br><br>
-  <p>Copyright © GapminderVR 2018</p>
+  <p>Copyright © GapminderVR 2018| <a href="mailto:lemire@gmail.com?subject=GapminderVR">Get in touch</a>
 </footer>
 
 <script>
